@@ -1,3 +1,7 @@
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--add-modules", "org.graalvm.webimage.api"))
+}
+
 dependencies {
     api(project(":core"))
     api(project(":graphics:api"))
@@ -6,8 +10,4 @@ dependencies {
     implementation(project(":providers:graal-webgpu"))
     implementation(project(":providers:graal-windowing"))
     implementation(project(":providers:graal-slang-wasm"))
-
-    implementation(libs.graalvm.polyglot)
-    runtimeOnly(libs.graalvm.js)
-    runtimeOnly(libs.graalvm.wasm)
 }
