@@ -1,7 +1,8 @@
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--add-modules", "org.graalvm.webimage.api"))
+}
+
 dependencies {
     api(project(":graphics:webgpu"))
     implementation(libs.slf4j.api)
-    implementation(libs.graalvm.polyglot)
-    runtimeOnly(libs.graalvm.js)
-    runtimeOnly(libs.graalvm.wasm)
 }
