@@ -1,7 +1,9 @@
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(listOf("--add-modules", "org.graalvm.webimage.api"))
+}
+
 dependencies {
     api(project(":graphics:api"))
     api(project(":core"))
     implementation(libs.slf4j.api)
-    implementation(libs.graalvm.polyglot)
-    runtimeOnly(libs.graalvm.js)
 }
